# pytorchexamples

./: LICENSE  pyproject.toml
src/0_introduction/: tensors_creation.py
src/0_introduction/datasets_dataloaders/: datasets_dataloaders.py  normalize.py
src/0_introduction/models/: models_lenet.py
src/0_introduction/tensors/: tensors_arithmetic.py
src/0_introduction/training_test/: training_test.py
vscode/: settings.json
