[tool.poetry]
name = "pytorchexamples"
version = "0.1.0"
description = ""
authors = ["Alex Jiang <alex.jiang@grenoble-inp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
