[tool.poetry]
name = "pytorchexamples"
version = "0.1.0"
description = ""
authors = ["Alex Jiang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
ipympl = "^0.9.4"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
